[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/echo.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/DepthController.tscn" type="PackedScene" id=2]
[ext_resource path="res://entity_state/basic_enemy/basic_enemy.gd" type="Script" id=3]
[ext_resource path="res://scene/Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "melee_attack"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_melee_attack"
}, {
"args": [  ],
"method": "end_melee_attack"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.0416667
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.166667, 0.458333 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_ranged_attack"
}, {
"args": [  ],
"method": "end_ranged_attack"
} ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 20.3961

[node name="BasicEnemy" type="Area2D"]
collision_mask = 3
script = ExtResource( 3 )
bullet = ExtResource( 4 )
ranged_thresh = 200

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/melee_attack = SubResource( 2 )
anims/ranged_attack = SubResource( 3 )

[node name="MeleeAttack" type="Area2D" parent="."]
visible = false
rotation = 1.5708
scale = Vector2( 2.6, 2.28 )
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MeleeAttack"]
polygon = PoolVector2Array( 0, 0, -11, -21, 11, -21 )

[node name="DepthController" parent="." instance=ExtResource( 2 )]

[node name="Tween" type="Tween" parent="."]

[node name="echo" parent="." instance=ExtResource( 1 )]
pos = Vector2( 0, 0 )
speed = 2.0
decay = 0.05

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[connection signal="body_entered" from="MeleeAttack" to="." method="_on_MeleeAttack_body_entered"]
[connection signal="hide" from="DepthController" to="." method="_on_hide"]
[connection signal="show" from="DepthController" to="." method="_on_show"]
